(fix) Left align form labels (#40)
left align form labels

--- a/src/form-entry-workflow/styles.scss
+++ b/src/form-entry-workflow/styles.scss
@@ -36,6 +36,7 @@
   flex-grow: 1;
   max-height: calc(100vh - 14rem);
   overflow-y: scroll;
+  text-align: left;
 }
 
 .formContainer :global(.cds--form-item) :global(.question-area) {
